# ComfyUI

./: sync_comfyui_cust_nodes_suix.py  sync_comfyui_cust_nodes_suix.sh
custom_nodes/Enemyx-net_VibeVoice-ComfyUI_20251012/: pyproject.toml  requirements.txt
custom_nodes/Enemyx-net_VibeVoice-ComfyUI_20251012/examples/: Multiple-Speaker.json  Pause-Tag.json  Single-Speaker.json  VibeVoice-Unload-Memory.json
custom_nodes/Enemyx-net_VibeVoice-ComfyUI_20251012/nodes/: free_memory_node.py  multi_speaker_node.py  single_speaker_node.py
custom_nodes/Enemyx-net_VibeVoice-ComfyUI_20251012/vvembed/: LICENSE  README.md
custom_nodes/Enemyx-net_VibeVoice-ComfyUI_20251012/vvembed/modular/: modeling_vibevoice.py  modular_vibevoice_text_tokenizer.py  streamer.py
custom_nodes/Enemyx-net_VibeVoice-ComfyUI_20251012/vvembed/schedule/: timestep_sampler.py
custom_nodes/ali-vilab_ACE_plus_20251016/: install.py  pyproject.toml
custom_nodes/ali-vilab_ACE_plus_20251016/workflow/ComfyUI-ACE_Plus/: __init__.py
custom_nodes/ali-vilab_ACE_plus_20251016/workflow_example/: ACE_Plus_FFT_workflow_no_preprocess.json  ACE_Plus_LoRA_workflow_reference_generation.json
custom_nodes/bytedance_comfyui-lumi-batcher_20251016/: pyproject.toml
custom_nodes/bytedance_comfyui-lumi-batcher_20251016/frontend/: pnpm-lock.yaml
custom_nodes/bytedance_comfyui-lumi-batcher_20251016/frontend/api/: download.ts  resolve-file.ts
custom_nodes/bytedance_comfyui-lumi-batcher_20251016/frontend/data/: points.ts
custom_nodes/bytedance_comfyui-lumi-batcher_20251016/frontend/typings/: api.d.ts  css.d.ts  global.d.ts  litegraph.d.ts
custom_nodes/bytedance_comfyui-lumi-batcher_20251016/lumi_batcher_service/common/: excel.py  homeless.py  read_sql_file.py
custom_nodes/bytedance_comfyui-lumi-batcher_20251016/lumi_batcher_service/handler/: common.py
custom_nodes/bytedance_comfyui-lumi-batcher_20251016/lumi_batcher_service/thread/: base.py  utils.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/: .gitignore  __init__.py  pyproject.toml
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/docs/: INDEXTTS2_UPDATE_LOG.md  IndexTTS2_Emotion_Control_Guide.md
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/docs/Dev reports/: COMFYUI_MESSAGING_GUIDE.md  F5TTS_EDIT_IMPROVEMENTS_PLAN.md  PARAMETER_MIGRATION_CHECKLIST.md  STREAMING_ARCHITECTURE.md
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/docs/RVC/: RVC-Projects-Comparison-CORRECTED.md
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/engines/adapters/: rvc_adapter.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/engines/chatterbox/: continuous_worker_processor.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/engines/chatterbox_official_23lang/: __init__.py  streaming_model_manager.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/engines/f5_tts/: __init__.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/engines/f5tts/: __init__.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/engines/higgs_audio/: __init__.py  higgs_audio.py  higgs_audio_downloader.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/engines/rvc/: hubert_downloader.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/engines/vibevoice_engine/: vibevoice_engine.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/example_workflows/: Chatterbox integration.json
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/nodes/chatterbox_official_23lang/: chatterbox_official_23lang_processor.py  chatterbox_official_23lang_vc_processor.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/nodes/engines/: index_tts_engine_node.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/nodes/f5tts/: f5tts_node.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/nodes/index_tts/: qwen_emotion_node.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/nodes/vibevoice/: vibevoice_srt_processor.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/scripts/: bump_version_enhanced.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/utils/: phoneme_matcher.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/utils/models/: fallback_utils.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/utils/system/: dependency_checker.py  subprocess.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/utils/text/: character_parser.py  pause_processor.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/utils/voice/: __init__.py
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/voices_examples/vibevoice/: README.md
custom_nodes/diodiogod_TTS-Audio-Suite_20251017/web/: audio_analyzer_events.js  audio_analyzer_interface.js  audio_analyzer_visualization.js
custom_nodes/hao-ai-lab_FastVideo_20251018/: README.md  pyproject.toml
custom_nodes/hao-ai-lab_FastVideo_20251018/.github/workflows/: vsa-publish.yml
custom_nodes/hao-ai-lab_FastVideo_20251018/docker/: Dockerfile.python3.12.cuda12.9.1
custom_nodes/hao-ai-lab_FastVideo_20251018/docs/: requirements-docs.txt
custom_nodes/hao-ai-lab_FastVideo_20251018/fastvideo/: envs.py  fastvideo_args.py  utils.py
custom_nodes/hao-ai-lab_FastVideo_20251018/fastvideo/dataset/: __init__.py
custom_nodes/hao-ai-lab_FastVideo_20251018/fastvideo/distributed/: communication_op.py  (+1 more)
custom_nodes/kijai_ComfyUI-HunyuanVideoWrapper_20251012/: fp8_optimization.py  nodes.py  nodes_rf_inversion.py  pyproject.toml  readme.md  requirements.txt
custom_nodes/kijai_ComfyUI-HunyuanVideoWrapper_20251012/example_workflows/: hyvideo_custom_testing_01.json  hyvideo_dashtoon_keyframe_example_01.json  hyvideo_leapfusion_img2vid_example_01.json  hyvideo_skyreel_img2vid_example_01.json
custom_nodes/kijai_ComfyUI-HunyuanVideoWrapper_20251012/hyvideo/: constants.py
custom_nodes/kijai_ComfyUI-segment-anything-2_20251012/: pyproject.toml
custom_nodes/kijai_ComfyUI-segment-anything-2_20251012/sam2/: automatic_mask_generator.py
custom_nodes/lrzjason_Comfyui-QwenEditUtils_20251018/: README.md  nodes.py  pyproject.toml  qwen-edit-plus_example v4.json  test_exp.py
custom_nodes/pollockjj_ComfyUI-MultiGPU_20251018/: __init__.py  pyproject.toml
custom_nodes/smthemex_ComfyUI_Sonic_20251015/: pyproject.toml
(+2129 files in other folders)
