[project]
name = "VibeVoice-ComfyUI"
version = "1.8.1"
description = "ComfyUI wrapper for Microsoft VibeVoice TTS model. Supports single speaker, multi-speaker, and text file loading"
license = {file = "LICENSE"} 
authors = [{name = "Fabio Sarracino"}]
dependencies = ["accelerate>=1.6.0", "transformers>=4.51.3", "diffusers", "tqdm", "scipy", "ml-collections", "torch>=2.0.0", "torchaudio>=2.0.0", "numpy>=1.20.0", "librosa>=0.9.0", "soundfile>=0.12.0", "av>=14.3.0", "peft>=0.17.0", "huggingface_hub>=0.25.1", "absl-py", "aiortc", "bitsandbytes>=0.48.1", "protobuf"]

[project.urls]
Repository = "https://github.com/Enemyx-net/VibeVoice-ComfyUI"
"Bug Tracker" = "https://github.com/Enemyx-net/VibeVoice-ComfyUI/issues"

[tool.comfy]
PublisherId = "enemyx"
DisplayName = "VibeVoice ComfyUI"
Icon = ""
includes = []

