[project]
name = "comfyui_sonic"
description = "Sonic is a method about ' Shifting Focus to Global Audio Perception in Portrait Animation',you can use it in comfyUI."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["diffusers>=0.29.0", "torch", "torchaudio", "torchvision", "transformers", "imageio", "imageio-ffmpeg",  "#omegaconf", "tqdm", "libros", "einops","opencv-python"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_Sonic"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_Sonic"
Icon = ""
